--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "convex": "^1.13.2",
     "emoji-picker-react": "^4.11.1",
     "lucide-react": "^0.363.0",
-    "next": "14.1.4",
+    "next": "^14.2.5",
     "next-themes": "^0.3.0",
     "openai": "^4.54.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-player": "^2.16.0",
     "svix": "^1.27.0",
